<!--
Copyright 2015-2016 Amazon.com, Inc. or its affiliates. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
A copy of the License is located at

    http://aws.amazon.com/apache2.0/

or in the "license" file accompanying this file. This file is distributed
on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
express or implied. See the License for the specific language governing
permissions and limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/logout_fragment_padding"
              android:paddingRight="@dimen/logout_fragment_padding"
              android:paddingTop="@dimen/logout_fragment_padding"
              android:orientation="vertical">

    <TextView
            android:id="@+id/logout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/logout_title_color"
            android:text="@string/logout_label"
            android:textSize="@dimen/logout_fragment_title_size"/>


    <TextView
            android:id="@+id/logout_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/logout_fragment_middle_margins"
            android:text="@string/logout_dialog_description"
            android:textSize="@dimen/logout_fragment_desc_size"
            android:textColor="@color/logout_desc_color"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/logout_fragment_button_top_margins"
            android:orientation="horizontal">

        <Button
                android:id="@+id/accept_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/action_button_background"
                android:minWidth="@dimen/logout_fragment_button_width"
                android:minHeight="@dimen/logout_fragment_button_height"
                android:text="@string/logout_dialog_option_1"/>

        <Button
                android:id="@+id/cancel_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/logout_fragment_middle_margins"
                android:background="@drawable/action_button_background"
                android:minWidth="@dimen/logout_fragment_button_width"
                android:minHeight="@dimen/logout_fragment_button_height"
                android:text="@string/logout_dialog_option_2"/>

    </LinearLayout>

</LinearLayout>
